<resources>
    <string name="app_name">Disaster Tracker</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Cancel</string>

</resources>