<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/strt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start date"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="?attr/colorAccent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="YYYY-MM-DD"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        />
    <TextView
        android:id="@+id/end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="End date"
        android:textStyle="bold"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/endDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="YYYY-MM-DD"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        />
</LinearLayout>